Конфигурация сборки