@@ -1,6 +1,7 @@
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
@@ -8,7 +9,7 @@ import java.util.List;
 public class task1 {
 
     public static void main(String[] arg) throws IOException {
-        Path path = Path.of(arg[0]);
+        Path path = Paths.get(arg[0]);
 
         List<String> strings = Files.readAllLines(path);
         ArrayList<Short> shorts = new ArrayList<>(strings.size());
